# djust-tenants

./: .gitignore  MIGRATION.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/djust_tenants/: __init__.py  audit.py  backends.py  managers.py  middleware.py  mixin.py  models.py  resolvers.py  security.py
tests/: __init__.py  settings.py  test_audit.py  test_isolation.py  test_managers.py  test_middleware.py  test_mixin.py  test_resolvers.py  test_security.py  urls.py
tests/testapp/: __init__.py  models.py
