[project]
name = "djust-tenants"
version = "0.1.0"
description = "Multi-tenancy package for Django and djust applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "John Tipton", email = "john@djust.org" }
]
keywords = ["django", "djust", "multi-tenant", "saas", "multi-tenancy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
djust = [
    "djust>=0.3.0",
]
redis = [
    "redis>=5.0.0",
]
postgres = [
    "psycopg[binary]>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://djust.org"
Documentation = "https://docs.djust.org/tenants"
Repository = "https://github.com/djust-org/djust-tenants"
"Bug Tracker" = "https://github.com/djust-org/djust-tenants/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/djust_tenants"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "DJ"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
addopts = "--tb=short --strict-markers"
