[project]
name = "djust-tenants"
version = "99.0.0"
description = "DEPRECATED: use `pip install djust` instead."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "John Tipton", email = "john@djust.org" }
]

dependencies = [
    "djust>=0.5.6rc1",
]

[project.urls]
Homepage = "https://djust.org"
Repository = "https://github.com/djust-org/djust-tenants"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/djust_tenants"]
